cmake_minimum_required(VERSION 3.27)
project(Leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(Leetcode
        0931-minimum-falling-path-sum/0931-minimum-falling-path-sum.cpp
        645-SetMismatch/MisMatch.cpp
        149-MaxPointsonLine.cpp
        1582SpecialPosition.cpp
        201-Bitwise.cpp
        2144.cpp
        260.cpp
        45-Leetcode.cpp
        "452-min Arrows.cpp"
        513-leetcode.cpp
        525.cpp
        543-Diameterof-tree.cpp
        55-Jump.cpp
        886-Leetcode.cpp
        DifferenceOfSums.cpp
        extra.cpp
        LPS.cpp
        Uniqueintegers.cpp)
